# routes/index.js
@@ -37,5 +37,6 @@ router.get('/logout', (req, res, next)=>{
 
 router.use('/products', require('./products'));
 router.use('/users', require('./users'));
+router.use('/orders', require('./orders'));
 
 module.exports=router;
